# spObjectStore

./: CMakeLists.txt  LICENSE  README.md  library.json  spObjectStore.h
examples/: xmpl-basics.cpp  xmpl-change-CBs.cpp  xmpl-compareCBs.cpp  xmpl-createIdCBs.cpp  xmpl-sort-AtoZ.cpp  xmpl-sort-DESC.cpp  xmpl-sort-callback.cpp
src/: spObjectStore.h
